[gd_scene load_steps=11 format=3 uid="uid://cpqd13acuxpx"]

[ext_resource type="Script" uid="uid://bkn6faehi2i4w" path="res://Source/Systems/Player/TargetingComputer/targeting_computer.gd" id="1_8ig5e"]
[ext_resource type="Texture2D" uid="uid://bpffsct1c4xuy" path="res://Assets/Textures/Player/TargetingComputer/targeting_computer-Sheet.png" id="2_ewmvk"]
[ext_resource type="Texture2D" uid="uid://c63xwfnkq3vun" path="res://Assets/Textures/Player/TargetingComputer/targeting_indicator.png" id="3_ewmvk"]
[ext_resource type="Script" uid="uid://hts4ayfgd5jk" path="res://Source/Components/Clickable/clickable.gd" id="4_exnvl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ewmvk"]
atlas = ExtResource("2_ewmvk")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_exnvl"]
atlas = ExtResource("2_ewmvk")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tf01"]
atlas = ExtResource("2_ewmvk")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8swp"]
atlas = ExtResource("2_ewmvk")
region = Rect2(120, 0, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_1tf01"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewmvk")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exnvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tf01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8swp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exnvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tf01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8swp")
}],
"loop": true,
"name": &"static",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46m13"]
size = Vector2(8, 18)

[node name="TargetingComputer" type="Node2D"]
script = ExtResource("1_8ig5e")

[node name="Screen" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_1tf01")
animation = &"static"

[node name="TargetText" type="RichTextLabel" parent="Screen"]
z_index = 1
offset_left = -16.0
offset_top = -32.0
offset_right = 24.0
offset_bottom = 8.0
theme_override_colors/default_color = Color(0.772549, 0.321569, 0.945098, 1)
text = "TARGET"

[node name="TargetImage" type="Sprite2D" parent="."]
position = Vector2(0, -4)

[node name="TargetingIndicator" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, -22)
texture = ExtResource("3_ewmvk")

[node name="LeftButton" type="Area2D" parent="."]
position = Vector2(-24, -13)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftButton"]
position = Vector2(-4, 1)
scale = Vector2(0.6, 1.4)
polygon = PackedVector2Array(11.6667, -12.1429, -5, 0, 11.6667, 10.7143)

[node name="RightButton" type="Area2D" parent="."]
position = Vector2(24, -13)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightButton"]
position = Vector2(-4, 1)
scale = Vector2(0.6, 1.4)
polygon = PackedVector2Array(1.66667, -12.1429, 18.3333, 0, 1.66667, 10.7143)

[node name="Intents" type="Node2D" parent="."]

[node name="1" type="Sprite2D" parent="Intents"]
position = Vector2(-23, 17)

[node name="AmountLabel" type="RichTextLabel" parent="Intents/1"]
offset_left = -3.0
offset_top = -1.0
offset_right = 5.0
offset_bottom = 12.0
text = "52"
horizontal_alignment = 1

[node name="Clickable" type="Area2D" parent="Intents/1"]
script = ExtResource("4_exnvl")
metadata/_custom_type_script = "uid://hts4ayfgd5jk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intents/1/Clickable"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_46m13")

[node name="2" type="Sprite2D" parent="Intents"]
position = Vector2(-14, 17)

[node name="AmountLabel" type="RichTextLabel" parent="Intents/2"]
offset_left = -3.0
offset_top = -1.0
offset_right = 5.0
offset_bottom = 12.0
text = "0"
horizontal_alignment = 1

[node name="3" type="Sprite2D" parent="Intents"]
position = Vector2(-5, 17)

[node name="AmountLabel" type="RichTextLabel" parent="Intents/3"]
offset_left = -3.0
offset_top = -1.0
offset_right = 5.0
offset_bottom = 12.0
text = "0"
horizontal_alignment = 1

[node name="4" type="Sprite2D" parent="Intents"]
position = Vector2(4, 17)

[node name="AmountLabel" type="RichTextLabel" parent="Intents/4"]
offset_left = -3.0
offset_top = -1.0
offset_right = 5.0
offset_bottom = 12.0
text = "0"
horizontal_alignment = 1

[node name="5" type="Sprite2D" parent="Intents"]
position = Vector2(13, 17)

[node name="AmountLabel" type="RichTextLabel" parent="Intents/5"]
offset_left = -3.0
offset_top = -1.0
offset_right = 5.0
offset_bottom = 12.0
text = "0"
horizontal_alignment = 1

[node name="6" type="Sprite2D" parent="Intents"]
position = Vector2(22, 17)

[node name="AmountLabel" type="RichTextLabel" parent="Intents/6"]
offset_left = -3.0
offset_top = -1.0
offset_right = 5.0
offset_bottom = 12.0
text = "0"
horizontal_alignment = 1

[connection signal="input_event" from="LeftButton" to="." method="_on_left_button_input_event"]
[connection signal="input_event" from="RightButton" to="." method="_on_right_button_input_event"]
